2.0.1 - April 4, 2013
-------------
Fix some migrations for new ruby/rails versions
Don't use observers when running migrations

2.0.0 - April 2, 2013
-------------
Removed some unused gems
Update ruby to 1.9.3
Update rails to 3.2
Replace ISBN_tools gem with lisbn
Use current version of paperclip
Configure mailing in environment initializer
Remove tolk (hopefully) temporarily - Bibapp still needs work to get
	the current version to work
Fix deprecations
Move vendor/plugins code to lib (vendor/plugins is now deprecated)
Update omniauth
Workaround encoding issue

1.2.3 - April 2, 2013
--------------
Track .rvmrc in git
Add some database indexes
Update Rails version for security fixes
Make sure newly created work is indexed
Pin version of delayed_job_active_record (for Postgres 8.4 compatibility)
Fix imports with repeated author

1.2.2 - June 22, 2012
--------------
make_resourceful is now available as a gem instead of a plugin, so use it that way (also include backports gem for older rubies)
paperclip is now used in preference to attachment_fu
start some experimentation with caching
fix bugs around saved works
Remove PublisherSource class and related. It did nothing. Retain publisher_source_id in Publisher (at least for now).
Replace REXML and Hpricot XML parsing with Nokogiri, except for the citeproc vendored gem.
Removed parser for deprecated Refworks format (this can be resurrected if truly needed, but I don't really want to support it)
In PeopleController#show add icon link to take a user to shared works with co-author
Add view to show works shared between authors.
Use 'proper_works' (i.e. ActiveRecord Works) directly in some places that used to convert them to solr
Add rake task to delete old sessions to keep the sessions table cleaner
Fix bug with timeline view
Update rails version to 3.0.15
Update tolk version to 1.0.1 (bugfix)
Fix occasional error in how groups found their associated works

1.2.1 - February 28, 2012
--------------